--- a/apps/users/templates/register.html
+++ b/apps/users/templates/register.html
@@ -2,27 +2,23 @@
 
 {% load django_bootstrap5 %}
 
-
-{% block title %}Login{% endblock %}
+{% block title %}Registration{% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
-                <h2 class="mb-4">Login</h2>
+                <h2 class="mb-4">Registration</h2>
                 <form method="post">
                     {% csrf_token %}
                     {% bootstrap_form_errors form type='non_fields' %}
-                    <div class="form-group">
-                        {% bootstrap_field form.username %}
-                    </div>
-                    <div class="form-group">
-                        {% bootstrap_field form.password %}
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    {% bootstrap_field form.username %}
+                    {% bootstrap_field form.email %}
+                    {% bootstrap_field form.password %}
+                    {% bootstrap_field form.password2 %}
+                    <button type="submit" class="btn btn-primary">Register</button>
                 </form>
             </div>
         </div>
     </div>
 {% endblock %}
-
