--- a/apps/users/templates/registration/login.html
+++ b/apps/users/templates/registration/login.html
@@ -20,6 +20,7 @@
                         {% bootstrap_field form.password %}
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
+                    <a href="{% url 'register' %}" class="btn btn-secondary">Cadastro</a>
                 </form>
             </div>
         </div>
