fix formulario de registro

--- a/apps/users/templates/register.html
+++ b/apps/users/templates/register.html
@@ -14,6 +14,9 @@
                     {% bootstrap_form_errors form type='non_fields' %}
                     {% bootstrap_field form.username %}
                     {% bootstrap_field form.email %}
+                    {% bootstrap_field form.address %}
+                    {% bootstrap_field form.city %}
+                    {% bootstrap_field form.state %}
                     {% bootstrap_field form.password %}
                     {% bootstrap_field form.password2 %}
                     <button type="submit" class="btn btn-primary">Registrar</button>
